# pesa-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pesa_cli/: __init__.py  __main__.py  cli.py  main.py
tests/: test_cli.py
